--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
